// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 bifkuZ flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <span />
  </span>
</div>
`;

exports[`Badge should render with icon 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 bifkuZ flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 izYEwr flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 kRhnlP flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 bifkuZ flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 gsIJBL flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 iTdOrZ flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 jspXmG flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 fsJVBW flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 gKuyws flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with size 'lg' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 gGoswl flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with size 'md' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 bifkuZ flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;
